syntax = "proto3";

package user;

option go_package = "course/user-srv/proto/dto";

message ResourceDto{
  int32 id = 1;
  int32 parent = 2;
  int32 type = 3;
  string title = 4;
  string name = 5;
  string component = 6;
  int32 sort = 7;
  string icon = 8;
  string path = 9;
  bool IFrame = 10;
  bool cache = 11;
  bool hidden = 12;
  string permission = 13;
  bool AlwaysShow = 14;
  string redirect = 15;
  repeated ResourceDto children = 16;
}

message ResourceDtoList{
  repeated ResourceDto rows = 1;
}

message RoleDto{
  string Id = 1;
  string Name = 2;
  string Desc = 3;
  repeated int32 resourceIds = 4;
  repeated string userIds = 5;
}

message RolePageDto{
  int64 pageSize = 1;
  int64 pageNum = 2;
  string sortBy = 3;
  bool asc = 4;
  repeated RoleDto rows = 5;
}

message RoleUserDto {
  string Id = 1;
  string userId = 2;
  string roleId = 3;
}